Add media service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="quote1">\"आज़ादी की कभी शाम न होने देंगे,\n शहीदो की क़ुरबानी बदनाम न होने देंगे,\n बची है जो एक बूँद भी लहू की,\n तब तक भारत माँ का अंचल नीलम न होने देंगे."</string>
     <string name="quote2">\"दे सलामी इस तिरंगे को \n जिस से तेरी शान हैं, \n सर हमेशा ऊँचा रखना इसका \n जब तक दिल में जान हैं..!!\"</string>
     <string name="quote3">\"सारे जहाँ से अच्छा हिन्दोस्तां हमारा,हम बुलबुले हैं इसकी ये गुलसिता हमारा\"</string>
+    <string name="quote4">मैं भारत बरस का हरदम अमित सम्मान करता हूँ\nयहाँ की चांदनी मिट्टी का ही गुणगान करता हूँ,\nमुझे चिंता नहीं है स्वर्ग जाकर मोक्ष पाने की,\तिरंगा हो कफ़न मेरा, बस यही अरमान रखता हूँ।</string>
+    <string name="quote5">भारत का वीर जवान हूँ मैं,\nना हिन्दू, ना मुसलमान हूँ मैं,\nजख्मो से भरा सीना हैं मगर,\nदुश्मन के लिए चट्टान हूँ मैं,\nभारत का वीर जवान हूँ मैं ||</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
